syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.indri";

import "common.proto";

message UploadImagesRequest {
    repeated bytes imageContent = 1;
    repeated string imageNames = 2;
}

message MigrateImageRequest {
    string sourceUrl = 1;
    string destinationUri = 2;
}

service ImageService {
	  rpc UploadImages(UploadImagesRequest) returns (CommonStatus) {};
	  rpc MigrateImage(MigrateImageRequest) returns (CommonStatus) {};
}